--- a/index.html
+++ b/index.html
@@ -85,4 +85,129 @@
             text-align: center;
             display: none; /* Inicia oculto */
         }
-        .
+        .feedback.correct {
+            background-color: #d4edda;
+            color: #155724;
+            border: 1px solid #c3e6cb;
+        }
+        .feedback.incorrect {
+            background-color: #f8d7da;
+            color: #721c24;
+            border: 1px solid #f5c6cb;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <h1>Quizzes do Neymar</h1>
+        <p class="intro">
+            Teste seus conhecimentos sobre o craque brasileiro!
+        </p>
+
+        <p>
+            **Como responder:** Para cada pergunta, basta **clicar na bolinha** ao lado da alternativa que você considera correta. Depois, clique no botão "Verificar Respostas" no final do quiz.
+        </p>
+
+        <h2>Quiz 1: A Trajetória de um Craque</h2>
+        <form id="quiz1">
+            <div class="question-block">
+                <p class="question">1. Em que ano Neymar fez sua estreia como profissional pelo Santos Futebol Clube?</p>
+                <div class="options">
+                    <label><input type="radio" name="q1" value="a"> a) 2008</label>
+                    <label><input type="radio" name="q1" value="b"> b) 2009</label>
+                    <label><input type="radio" name="q1" value="c"> c) 2010</label>
+                    <label><input type="radio" name="q1" value="d"> d) 2011</label>
+                </div>
+            </div>
+
+            <div class="question-block">
+                <p class="question">2. Qual foi o primeiro clube europeu que Neymar defendeu?</p>
+                <div class="options">
+                    <label><input type="radio" name="q2" value="a"> a) Real Madrid</label>
+                    <label><input type="radio" name="q2" value="b"> b) Paris Saint-Germain</label>
+                    <label><input type="radio" name="q2" value="c"> c) Barcelona</label>
+                    <label><input type="radio" name="q2" value="d"> d) Chelsea</label>
+                </div>
+            </div>
+
+            <button type="button" class="verify-button" onclick="verificarRespostas('quiz1')">Verificar Respostas</button>
+            <div id="feedback1" class="feedback"></div>
+        </form>
+
+        <h2>Quiz 2: Curiosidades e Conquistas</h2>
+        <form id="quiz2">
+            <div class="question-block">
+                <p class="question">1. Qual foi o prêmio Puskás, de gol mais bonito do ano, que Neymar ganhou?</p>
+                <div class="options">
+                    <label><input type="radio" name="q3" value="a"> a) 2010</label>
+                    <label><input type="radio" name="q3" value="b"> b) 2011</label>
+                    <label><input type="radio" name="q3" value="c"> c) 2012</label>
+                    <label><input type="radio" name="q3" value="d"> d) 2013</label>
+                </div>
+            </div>
+
+            <div class="question-block">
+                <p class="question">2. Qual foi o valor da transferência de Neymar do Barcelona para o PSG, que se tornou a mais cara da história?</p>
+                <div class="options">
+                    <label><input type="radio" name="q4" value="a"> a) 180 milhões de euros</label>
+                    <label><input type="radio" name="q4" value="b"> b) 222 milhões de euros</label>
+                    <label><input type="radio" name="q4" value="c"> c) 250 milhões de euros</label>
+                    <label><input type="radio" name="q4" value="d"> d) 280 milhões de euros</label>
+                </div>
+            </div>
+
+            <button type="button" class="verify-button" onclick="verificarRespostas('quiz2')">Verificar Respostas</button>
+            <div id="feedback2" class="feedback"></div>
+        </form>
+    </div>
+
+    <script>
+        function verificarRespostas(quizId) {
+            const form = document.getElementById(quizId);
+            const feedbackDiv = document.getElementById(`feedback${quizId.slice(-1)}`);
+            let allCorrect = true;
+            let feedbackText = "";
+
+            // Respostas corretas
+            const respostasCorretas = {
+                q1: 'b',
+                q2: 'c',
+                q3: 'b',
+                q4: 'b'
+            };
+
+            const questions = form.querySelectorAll('.question-block');
+            questions.forEach(questionBlock => {
+                const questionName = questionBlock.querySelector('input[type="radio"]').name;
+                const respostaSelecionada = form.querySelector(`input[name="${questionName}"]:checked`);
+                
+                if (respostaSelecionada) {
+                    if (respostaSelecionada.value === respostasCorretas[questionName]) {
+                        feedbackText += `<p>✅ **Questão ${questionName.slice(1)}:** Resposta correta!</p>`;
+                    } else {
+                        feedbackText += `<p>❌ **Questão ${questionName.slice(1)}:** Resposta incorreta. A correta era a alternativa **${respostasCorretas[questionName].toUpperCase()}**.</p>`;
+                        allCorrect = false;
+                    }
+                } else {
+                    feedbackText += `<p>⚠️ **Questão ${questionName.slice(1)}:** Você não respondeu a esta pergunta.</p>`;
+                    allCorrect = false;
+                }
+            });
+
+            feedbackDiv.innerHTML = feedbackText;
+            feedbackDiv.style.display = 'block';
+            
+            // Adiciona a classe de cor de feedback final
+            if (allCorrect) {
+                feedbackDiv.classList.remove('incorrect');
+                feedbackDiv.classList.add('correct');
+            } else {
+                feedbackDiv.classList.remove('correct');
+                feedbackDiv.classList.add('incorrect');
+            }
+        }
+    </script>
+
+</body>
+</html>
