--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 
     <script src="script.js"></script>
 </body>
-</html>
-body {
+</html>body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     text-align: center;
@@ -85,8 +84,7 @@ body {
 
 .question button:hover {
     background-color: #ddd;
-}
-let score = 0;
+}let score = 0;
 let totalQuestions = 0;
 
 function showQuiz(quizId) {
